--- a/BOOTSTRAP/estilos.css
+++ b/BOOTSTRAP/estilos.css
@@ -59,3 +59,13 @@
         margin: 10px;
         padding: 10px;
     }
+
+    h3{
+        text-align: center;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    .adivinanza {
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+    }
