Agrego funcionalidad adivinanza - Actividad con plantilla

--- a/Pagina-FrontEnd - Plantilla Bootstrap/estilos.css
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/estilos.css
@@ -17,6 +17,11 @@ blockquote, q {
   quotes: none;
 }
 
+.adivinanza{
+  text-align: center;
+}
+
+
 blockquote:before, blockquote:after, q:before, q:after {
   content: none;
 }
